fixed overflow issues on mobile

--- a/src/pages/Card/CardComponent/CardComponent.css
+++ b/src/pages/Card/CardComponent/CardComponent.css
@@ -116,7 +116,7 @@ color: white;
   height: 100%;
   margin: 0 !important;
   padding: 0;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -142,8 +142,8 @@ color: white;
     background-color: #1F1F1F;
   }
   .social-icons{
-    width: 90%;
-    margin-left: 7%;
+    width: 100%;
+   
   
   }
   .card-component{
@@ -211,8 +211,10 @@ color: white;
 
 .social-icons-container {
   flex: 1;
+  width: auto;
   overflow-y: auto;
   height: auto;
+  overflow-x: hidden;
    /* Adjust the max-height to leave space for other elements */
 }
 
@@ -221,6 +223,7 @@ color: white;
   grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
   gap: 20px;
   margin-top: 10%;
+  padding:10px;
   justify-content: center;
   align-items: center;
   padding-bottom: 20px; /* Add padding to prevent overlapping with the card-footer */
